WIP: Started work on 112ification.